Updated app.css so weird scrolling stuff doesn't happen on mobile (again) and fixed session exp text

--- a/src/app.css
+++ b/src/app.css
@@ -80,7 +80,7 @@ a {
 
 .container {
     display: flex;
-    min-height: 100vh;
+    min-height: 100dvh;
     background: var(--bg);
     color: var(--text);
 }
@@ -132,24 +132,46 @@ html {
     background: var(--bg);
 }
 
+
 .chat-container {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    width: 100%;
-    max-width: none;
+    height: 100dvh;
 }
 
 .chat {
     height: 70vh;
+    min-height: 0;
     overflow-y: auto;
     padding: 12px;
     display: flex;
     flex-direction: column;
     gap: 6px;
     background: var(--bg-chat);
+
 }
+
+
+::-webkit-scrollbar-corner {
+    border-radius: 3px;
+    background: var(--accent);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--secondary-accent);
+    width:2px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+
 
 .info-page {
     flex-direction: column;
@@ -162,7 +184,7 @@ html {
 
 
 .settings-input {
-    width: 180px;
+    width: 80px;
     flex: unset;
     padding: 4px 10px;
     font-size: 12px;
